--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,86 @@
+* {
+  box-sizing: border-box;
+  user-select: none;
+}
+
 body {
   margin: 0;
-  margin-top: 1rem;
+  background-color: #CCC;
+  height: 50vh;
+  overflow: hidden;
+}
+
+.lanes {
   display: flex;
   justify-content: center;
-}
-
-.date-picker-container {
-  position: relative;
-  display: inline-block;
-}
-
-.date-picker-button {
-  cursor: pointer;
-}
-
-
-
-.date-picker {
-  display: none;
-  position: absolute;
-  
-  margin-top: 1rem;
-  top: 100%;
-  transform: translateX(-50%);
-  left: 50%;
   padding: .5rem;
-  border-radius: .5rem;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05), 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06), 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  background-color: white;
-}
-
-.date-picker-header {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  font-size: .8rem;
-  align-items: center;
-}
-
-.date-picker-grid {
-  display: grid;
-  gap: .5rem;
-  grid-template-columns: repeat(7, 2rem);
-  grid-auto-rows: 2rem;
-}
-
-.date-picker-grid > * {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
   height: 100%;
 }
 
-.date-picker-grid-header {
-  font-weight: bold;
-  font-size: .75rem;
-  color: #333;
+.lane {
+  display: flex;
+  flex-direction: column;
+  background-color: #AAA;
+  flex-basis: 0;
+  flex-grow: 1;
+  margin: .25rem;
+  border-radius: .25rem;
+  overflow: hidden;
+  max-width: 16rem;
 }
 
-.date-picker-grid-dates {
-  color: #555;
+.header {
+  text-align: center;
+  background-color: #333;
+  color: white;
+  padding: .25rem;
 }
 
-.date-picker-other-month-date {
+.tasks {
+  padding: 0 .25rem;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.task {
+  padding: .25rem;
+  border-radius: .25rem;
+  background-color: white;
+  cursor: grab;
+  margin: .25rem 0;
+  text-align: center;
+  word-wrap: break-word;
+}
+
+.task-input {
+  padding: .3rem .5rem;
+  border: none;
+  background-color: #333;
+  color: white;
+  outline: none;
+  width: 100%;
+}
+
+.task-input::placeholder {
   color: #AAA;
 }
 
-.date-picker-grid-dates > .date {
-  cursor: pointer;
-  border-radius: .25rem;
-  border: none;
-  background: none;
+[data-draggable] {
+  user-select: none;
 }
 
-.date-picker-grid-dates > *:hover {
-  background-color: hsl(200, 100%, 80%);
-  color: black;
+[data-draggable].hide {
+  display: none !important;
 }
 
-.month-button {
-  background: none;
-  border: none;
-  cursor: pointer;
+[data-draggable].dragging {
+  position: absolute;
+  opacity: .5;
+  transform: rotate(5deg);
+  pointer-events: none;
 }
 
-.month-button:hover {
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  border-radius: .5rem;
+[data-draggable].ghost {
+  background-color: black;
+  opacity: .25;
 }
